fix: fix header spacing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -114,7 +114,7 @@ ul {
 /* TABS */
 .tabs {
   padding: 0px;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 
   @media screen and (min-width: 640px) {
     padding: 0px 74px;
